[TM-3081] Remove ownership stakes from v2 API
