# resources/docs/swagger-v2.yml
@@ -2231,52 +2231,6 @@ definitions:
         type: string
       collection:
         type: string
-  V2OwnershipStakeCreate:
-    title: V2OwnershipStakeCreate
-    type: object
-    properties:
-      organisation_id:
-        type: string
-      position:
-        type: string
-      gender:
-        type: string
-      age:
-        type: integer
-      percent_ownership:
-        type: integer
-  V2OwnershipStakeRead:
-    title: V2OwnershipStakeRead
-    type: object
-    properties:
-      uuid:
-        type: string
-      organisation_id:
-        type: string
-      position:
-        type: string
-      gender:
-        type: string
-      age:
-        type: integer
-      percent_ownership:
-        type: integer
-  V2OwnershipStakeUpdate:
-    title: V2OwnershipStakeUpdate
-    type: object
-    properties:
-      first_name:
-        type: string
-      last_name:
-        type: string
-      title:
-        type: string
-      gender:
-        type: string
-      year_of_birth:
-        type: integer
-      percent_ownership:
-        type: integer
   V2FundingTypeRead:
     title: V2FundingTypeRead
     x-stoplight:
@@ -2641,125 +2595,6 @@ paths:
                 type: integer
               nationality:
                 type: string
-  /v2/ownership-stake:
-    post:
-      summary: Create a ownership stake
-      operationId: post-v2-ownership-stake
-      responses:
-        '201':
-          description: Created
-          schema:
-            title: V2OwnershipStakeRead
-            type: object
-            properties:
-              uuid:
-                type: string
-              organisation_id:
-                type: string
-              position:
-                type: string
-              gender:
-                type: string
-              age:
-                type: integer
-              percent_ownership:
-                type: integer
-      parameters:
-        - in: body
-          name: body
-          schema:
-            title: V2OwnershipStakeCreate
-            type: object
-            properties:
-              organisation_id:
-                type: string
-              position:
-                type: string
-              gender:
-                type: string
-              age:
-                type: integer
-              percent_ownership:
-                type: integer
-      tags:
-        - V2 Ownership Stake
-  '/v2/ownership-stake/{UUID}':
-    patch:
-      summary: Update a ownership stake
-      operationId: patch-v2-ownership-stake-UUID
-      responses:
-        '200':
-          description: OK
-          schema:
-            title: V2OwnershipStakeRead
-            type: object
-            properties:
-              uuid:
-                type: string
-              organisation_id:
-                type: string
-              position:
-                type: string
-              gender:
-                type: string
-              age:
-                type: integer
-              percent_ownership:
-                type: integer
-      tags:
-        - V2 Ownership Stake
-      parameters:
-        - type: string
-          name: UUID
-          in: path
-          required: true
-        - in: body
-          name: body
-          schema:
-            title: V2OwnershipStakeUpdate
-            type: object
-            properties:
-              first_name:
-                type: string
-              last_name:
-                type: string
-              title:
-                type: string
-              gender:
-                type: string
-              year_of_birth:
-                type: integer
-              percent_ownership:
-                type: integer
-    delete:
-      summary: Delete a ownership stake
-      operationId: delete-v2-ownership-stake-UUID
-      parameters:
-        - type: string
-          name: UUID
-          in: path
-          required: true
-      responses:
-        '200':
-          description: OK
-          schema:
-            title: V2OwnershipStakeRead
-            type: object
-            properties:
-              uuid:
-                type: string
-              organisation_id:
-                type: string
-              position:
-                type: string
-              gender:
-                type: string
-              age:
-                type: integer
-              percent_ownership:
-                type: integer
-      tags:
-        - V2 Ownership Stake
   '/v2/admin/forms/submissions/{UUID}/export':
     get:
       summary: Export form submissions
